# bee

./: Cargo.toml  README.md  template.tex
docs/: busy.bee
src/: lib.rs  main.rs
src/busybee/: another.scm  busybee.scm  forester-test.bee  forester.scm  html.scm  latex.scm  markdown.scm  parsing.scm  query.md  transclude.scm
src/busybee/test/: basic.bee  examples.bee  parse.scm  query.bee  template.bee  test.bee  test.md  transclude.scm  transcluded-file.bee  transcluding.bee  transcluding.tex
src/cli/: main.rs
src/cli/commands/: convert.rs
src/core/: app.rs  buffer.rs  components.rs  document.rs  engine.rs  interface.rs  mod.rs  model.rs  stdlib.rs
src/gui/: components.rs  mod.rs
test/: test.bee
